# mirror

./: .gitignore  CMakeLists.txt  Cargo.toml  LIBRARYS.txt  LICENSE.txt  README.md  build.js  index.js  jrtplib-example.cpp  license.rs  package.json
.cargo/: config.toml
.github/workflows/: gradle-publish.yml  main-release.yaml  release.yml  static.yml
android/mirror/: build.gradle
app/: .gitignore  launch.js  package.json  tsconfig.json
app/desktop/: index.js  package.json  tsconfig.json
app/napi/: .gitignore  Cargo.toml  binding.gyp  index.d.ts  index.js  package.json
app/napi/src/: capture.cpp  capture.h  context.h  lib.cpp  lib.h  lib.rs  receiver.cpp  receiver.h  sender.cpp  sender.h  window.h
app/src/: index.js  index.ts  preload.ts
app/view/: index.css  index.html  index.js  preload.js
app/views/: index.d.ts  next.config.ts  package.json  tsconfig.json
audio/: Cargo.toml
audio/src/: lib.rs
broadcast/: Cargo.toml
broadcast/examples/: simple.rs
broadcast/src/: lib.rs  packet.rs  server.rs
capture/: CMakeLists.txt  Cargo.toml  build.rs
capture/examples/: get.rs  simple.rs
capture/lib/: CMakeLists.txt  camera.cpp  camera.h  capture.cpp  capture.h  desktop.cpp  desktop.h  video.h
capture/src/: audio.rs  device.rs  lib.rs  manager.rs  microphone.rs  unix.rs
capture/src/linux/: camera.rs  mod.rs  screen.rs
capture/src/macos/: camera.rs  screen.rs
capture/src/unix/: mod.rs  screen.rs
capture/src/win32/: camera.rs  mod.rs  screen.rs
codec/: CMakeLists.txt  Cargo.toml  build.rs
codec/core/: CMakeLists.txt
codec/core/src/: codec.h  video_encoder.c  video_encoder.cpp
codec/examples/: simple.rs
codec/lib/: CMakeLists.txt  audio_decode.cpp  audio_encode.cpp  codec.cpp  codec.h  h264.cpp  opus.cpp  video_decode.cpp  video_encode.cpp  video_encoder.c  video_encoder.cpp
codec/lib/audio/: encode.cpp
codec/lib/video/: decode.cpp  decoder.cpp  encode.cpp  encoder.cpp
codec/source/: codec.h
codec/source/video/: decode.cpp  encode.cpp
codec/src/: audio.rs  codec.rs  lib.rs  util.rs  video.rs
codec/src/audio/: decode.rs  encode.rs  mod.rs  stream.rs
codec/src/video/: decode.rs  encode.rs  frame.rs  mod.rs  stream.rs
common/: Cargo.toml  build.rs
common/frame/: Cargo.toml
common/frame/include/: frame.h
common/frame/src/: lib.rs  video.rs
common/include/: frame.h
common/jni-macro/: Cargo.toml
common/jni-macro/src/: lib.rs
common/src/: ffmpeg.rs  frame.rs  lib.rs  logger.rs  macos.rs  strings.rs
common/srt/: Cargo.toml
common/srt/src/: lib.rs
common/utils/: Cargo.toml
common/utils/src/: lib.rs  logger.rs  win32.rs
devices/: Cargo.toml  build.rs
devices/core/: CMakeLists.txt  devices.c
devices/examples/: simple.rs
devices/lib/: devices.c  devices.cpp  devices.h
discovery/: Cargo.toml
discovery/src/: lib.rs
examples/desktop/: CMakeLists.txt  README.md  common.h  main.cpp
examples/desktop/receiver/: CMakeLists.txt  main.cpp
examples/desktop/sender/: CMakeLists.txt  main.cpp
examples/desktop/src/: args.cpp  args.h  main.cpp  render.cpp  render.h  service.cpp  service.h  wrapper.cpp  wrapper.h
examples/rust/: Cargo.toml  README.md
examples/rust/src/: main.rs
exports/: Cargo.toml
ffi/: Cargo.toml
ffi/android/mirror/: build.gradle
ffi/android/mirror/src/main/java/com/github/mycrl/mirror/: Codec.kt  Mirror.kt
ffi/include/: hylarana.h  mirror.h
ffi/mirror/: Cargo.toml
ffi/mirror/include/: mirror.h
ffi/mirror/src/: lib.rs
ffi/mirror/src/android/: adapter.rs
ffi/src/: lib.rs
ffi/src/android/: adapter.rs  helper.rs
ffi/src/ffi/: capture.rs  discovery.rs  mod.rs  observer.rs  player.rs  renderer.rs
ffi/src/jni/: discovery.rs  mod.rs  object.rs  receiver.rs  sender.rs
frame/: Cargo.toml
graphics/: Cargo.toml
graphics/src/: dx11.rs  helper.rs  interop.rs  lib.rs  samples.rs  texture.rs  vertex.rs
graphics/src/shaders/: vertex.wgsl
graphics/src/shaders/fragment/: any.wgsl  bgr.wgsl  i420.wgsl  nv12.wgsl
graphics/src/texture/: bgra.rs  i420.rs  nv12.rs  rgba.rs
hylarana/: Cargo.toml  README.md
hylarana/src/: lib.rs  receiver.rs  sender.rs
mirror/: Cargo.toml
mirror/android/: build.gradle
mirror/android/mirror/: build.gradle
mirror/android/mirror/src/main/cpp/: CMakeLists.txt
mirror/src/: audio.rs  lib.rs  receiver.rs  render.rs  sender.rs  video.rs
mirror/src/shaders/: i420_fragment.wgsl  nv12_fragment.wgsl
multicast/: Cargo.toml  build.rs
multicast/examples/: simple.rs
multicast/src/: client.rs  dequeue.rs  lib.rs  muxer.rs  nack.rs  packet.rs  receiver.rs  reliable.rs  remuxer.rs  sender.rs  server.rs
native-capture/: Cargo.toml
native-capture/examples/: simple.rs
native-capture/src/: camera.rs  lib.rs  screen.rs
new-codec/: Cargo.toml
physeter/: Cargo.toml
renderer/: Cargo.toml
resample/: Cargo.toml
resample/src/: lib.rs
rist/: Cargo.toml  build.rs
rtp/: Cargo.toml  build.rs  index.js
rtp/core/: CMakeLists.txt
rtp/core/src/: rtp.cpp  rtp.h
sdk/desktop/: Cargo.toml
sdk/desktop/examples/: simple.rs
sdk/desktop/include/: mirror.h
sdk/desktop/src/: factory.rs  lib.rs  mirror.rs  receiver.rs  render.rs  sender.rs
server/: Cargo.toml
server/src/: main.rs
service/: Cargo.toml
service/src/: lib.rs  main.rs  proxy.rs  route.rs  signal.rs
srt/: Cargo.toml  build.rs
srt/examples/: simple.rs
srt/src/: fragments.rs  lib.rs  listener.rs  options.rs  server.rs  socket.rs
transfer/: Cargo.toml  build.rs
transport/: Cargo.toml  build.rs
transport/examples/: simple.rs
transport/src/: adapter.rs  discovery.rs  lib.rs  license.rs  package.rs  payload.rs  receiver.rs  sender.rs  service.rs
transport/src/multi/: dequeue.rs
transport/src/multicast/: fragments.rs  mod.rs
transport/src/srt/: mod.rs  options.rs  server.rs  socket.rs
transport/src/transfer/: dequeue.rs  packet.rs  receiver.rs  sender.rs
transport/src/transmission/: mod.rs  options.rs  server.rs  socket.rs
transport/srt/: Cargo.toml
utils/: Cargo.toml
utils/src/: atomic.rs  lib.rs  logger.rs  win32.rs
wgpu-test/: Cargo.toml
(+163 files in other folders)
