[profile.release]
debug-assertions = false
overflow-checks = false
strip = "debuginfo"
panic = "abort"
debug = false
lto = true

[workspace]
resolver = "2"
members = [
    "ffi",
    "codec",
    "capture",
    "graphics",
    "mirror",
    "service",
    "transport",
    "multicast",
    "srt",
    "frame",
    "utils",
    "audio",
    "app/napi",
]
