[profile.release]
debug-assertions = false
overflow-checks = false
strip = "debuginfo"
panic = "abort"
debug = false
lto = true

[workspace]
resolver = "2"
members = [
    "ffi",
    "common",
    "codec",
    "resample",
    "capture",
    "graphics",
    "mirror",
    "service",
    "transport",
    "app/napi", "renderer",
]
