[profile.release]
debug-assertions = false
overflow-checks = false
strip = "debuginfo"
panic = "abort"
debug = false
lto = true

[workspace]
resolver = "2"
members = [
    # "ffi",
    "common",
    "codec",
    "resample",
    "capture",
    "graphics",
    "hylarana",
    "server",
    "transport",
    # "examples/rust", 
    "discovery",
]
