[package]
name = "capture"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
cpal = "0.15.3"
once_cell = "1.19.0"
log = "0.4.20"
audio = { path = "../common/audio" }
utils = { path = "../common/utils" }
frame = { path = "../common/frame" }
graphics = { path = "../graphics" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = { git = "https://github.com/mycrl/windows-capture", branch = "expose-d3d" }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Media", 
    "Win32_Media_MediaFoundation", 
]

[target.'cfg(target_os = "linux")'.dependencies]
ash = "0.38.0"
