[package]
name = "hylarana-capture"
version = "0.1.1"
edition = "2021"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
thiserror = "1.0.63"
cpal = "0.15.3"
once_cell = "1.19.0"
log = "0.4.20"
parking_lot = "0.12"
hylarana-common = { path = "../common", version = "0.1" }
hylarana-resample = { path = "../resample", version = "0.1" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = { version = "1.4.0" }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58.0"
features = ["Win32_Media", "Win32_Media_MediaFoundation"]

[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14.0"

[target.'cfg(target_os = "linux")'.dependencies.mirror-ffmpeg-sys]
default-features = false
version = "0.1" 
features = [
    "swscale",
    "avformat",
    "avcodec",
    "avutil",
    "avfilter",
    "postproc",
    "swresample"
]
