[package]
name = "mirror-codec"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
thiserror = "1.0.63"
mirror-common = { path = "../common", version = "0.1" }

[target.'cfg(target_os = "windows")'.dependencies.mirror-ffmpeg-sys]
version = "0.1"
features = [
    "avcodec",
    "avdevice",
    "avutil",
    "qsv"
]

[target.'cfg(not(target_os = "windows"))'.dependencies.mirror-ffmpeg-sys]
version = "0.1"
features = [
    "avcodec",
    "avdevice",
    "avutil",
]
