[package]
name = "hylarana-codec"
version = "0.2.0-beta.1"
edition = "2021"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
log = "0.4.20"
thiserror = "1.0.63"
hylarana-common = { path = "../common", version = "0.2.0-beta.1" }

[target.'cfg(target_os = "windows")'.dependencies.mirror-ffmpeg-sys]
default-features = false
version = "0.1"
features = [
    "avcodec",
    "avdevice",
    "avutil",
    "qsv"
]

[target.'cfg(not(target_os = "windows"))'.dependencies.mirror-ffmpeg-sys]
default-features = false
version = "0.1"
features = [
    "avcodec",
    "avdevice",
    "avutil",
]
