[package]
name = "mirror-common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.56"
log = "0.4.20"
fern = { version = "0.6.2", features = ["date-based", "colored", "syslog-6"] }
chrono = { version = "0.4", features = ["clock", "alloc"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58.0"
features = [
    "Win32",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Media",
    "Win32_Media_MediaFoundation",
    "Win32_Security",
]

[build-dependencies]
anyhow = "1.0.80"
bindgen = { version = "0.70", default-features = false, features = ["runtime"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-video-sys = { version = "0.1.4", default-features = false }

[target.'cfg(target_os = "windows")'.build-dependencies]
vcpkg = "0.2.15"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3.31"

[features]
avcodec = []
avdevice = []
avformat = []
avfilter = []
avutil = []
swresample = []
swscale = []
