[package]
name = "hylarana-discovery"
version = "0.2.0-beta"
edition = "2021"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
thiserror = "2.0.3"
mdns-sd = "0.11.5"
log = "0.4.22"
serde = "1.0.215"
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["v4"] }
