[package]
name = "hylarana-shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "hylarana"
doc = false

[dependencies]
anyhow = "1.0.82"
log = "0.4.20"
hylarana-common = { path = "../common", version = "0.1" }

[target.'cfg(target_os = "android")'.dependencies]
bytes = "1.5"
jni = "0.21.1"
num_cpus = "1.16.0"
hylarana-transport = { path = "../transport", version = "0.1" }
hylarana-discovery = { path = "../discovery", version = "0.1" }

[target.'cfg(not(target_os = "android"))'.dependencies]
hylarana = { path = "../hylarana", version = "0.1" }
