[package]
name = "mirror-graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "0.3.0"
thiserror = "1.0.63"
smallvec = "1.13.2"
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "8e787eb70a98c260f44b129128037d9a28d2c9ae" }
bytemuck = { version = "1.17.1", features = ["derive"] }
mirror-common = { path = "../common", version = "0.1" }
mirror-resample = { path = "../resample", version = "0.1" }
parking_lot = "0.12"
