[package]
name = "hylarana-graphics"
version = "0.2.0-beta.1"
edition = "2021"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
pollster = "0.3.0"
thiserror = "1.0.63"
smallvec = "1.13.2"
wgpu = "23"
bytemuck = { version = "1.17.1", features = ["derive"] }
hylarana-common = { path = "../common", version = "0.2.0-beta.1" }
hylarana-resample = { path = "../resample", version = "0.2.0-beta.1" }
