[package]
name = "mirror"
version = "0.1.0"
edition = "2021"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"

[dependencies]
thiserror = "1.0.63"
bytes = "1.5"
log = "0.4.20"
parking_lot = "0.12"
mirror-common = { path = "../common", version = "0.1" }
mirror-transport = { path = "../transport", version = "0.1" }
mirror-graphics = { path = "../graphics", version = "0.1" }

[target.'cfg(not(target_os = "android"))'.dependencies]
mirror-capture = { path = "../capture", version = "0.1" }
mirror-codec = { path = "../codec", version = "0.1" }
rodio = { version = "0.19.0", default-features = false }
