[package]
name = "multicast"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
log = "0.4.21"
thiserror = "1.0.58"
thread-priority = "0.16.0"
common = { path = "../common" }
socket2 = "0.5.6"
crc = "3.0.1"
# reed-solomon-erasure = { version = "4.0", features = [ "simd-accel" ] }

[dev-dependencies]
anyhow = "1.0.81"
rand = "0.8.5"
