[package]
name = "native-capture"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
common = { path = "../common" }
log = "0.4.20"

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "1.2.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.56.0"
features = [
    "Win32_System_Com", 
    "Win32_Media", 
    "Win32_Media_MediaFoundation",
    "Win32_Graphics",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Graphics",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
]

[dev-dependencies]
renderer = { path = "../sdk/renderer" }
