[package]
name = "mirror-resample"
version = "0.1.0"
edition = "2021"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/mirror"

[dependencies]
rubato = "0.16.0"
mirror-common = { path = "../common", version = "0.1" }
