[package]
name = "hylarana-resample"
version = "0.2.0-beta.1"
edition = "2021"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
rubato = "0.16.0"
hylarana-common = { path = "../common", version = "0.2.0-beta.1" }
