[package]
name = "mirror-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
log = "0.4.20"
simple_logger = "4"
common = { path = "../common" }
transport = { path = "../transport" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
mimalloc = { version = "*", default-features = false }
parking_lot = "0.12"
