[package]
name = "srt"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
libc = "0.2"
log = "0.4.20"
os_socketaddr = "0.2.5"
tokio = { version = "1.35.1", features = ["sync", "rt"] }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0.79"

[build-dependencies]
anyhow = "1.0.79"

[[example]]
name = "simple"
