[package]
name = "srt"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
libc = "0.2"
log = "0.4.20"
os_socketaddr = "0.2.5"
common = { path = "../common" }
xxhash-rust = { version = "0.8.11", features = ["xxh3", "xxh64"]}

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
anyhow = "1.0.79"
