[package]
name = "mirror-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
log = "0.4.20"
crossbeam = "0.8.4"
mirror-common = { path = "../common", version = "0.1" }
xxhash-rust = { version = "0.8.11", features = ["xxh3", "xxh64"] }
smallvec = "1.13.2"
parking_lot = "0.12"
rmp-serde = "1.3.0"
libc = "0.2"
os_socketaddr = "0.2.5"
socket2 = "0.5.6"
once_cell = "1.19.0"
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1.37.0", features = [
    "net",
    "sync",
    "macros",
    "rt-multi-thread",
] }

[build-dependencies]
anyhow = "1.0.79"
which = "6.0.3"
