[package]
name = "hylarana-transport"
version = "0.1.0"
edition = "2021"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
bytes = "1.5.0"
log = "0.4.20"
crossbeam = "0.8.4"
hylarana-common = { path = "../common", version = "0.1" }
xxhash-rust = { version = "0.8.11", features = ["xxh3", "xxh64"] }
parking_lot = "0.12"
rmp-serde = "1.3.0"
libc = "0.2"
uuid = { version = "1.11.0", features = ["v4"] }
os_socketaddr = "0.2.5"
socket2 = "0.5.6"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = [
    "net",
    "sync",
    "macros",
    "rt-multi-thread",
] }

[build-dependencies]
anyhow = "1.0.79"
which = "6.0.3"
