[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
thiserror = "1.0.56"
log = "0.4.20"
simplelog = "0.12.2"
time = "0.3.36"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58.0"
features = [
    "Win32", 
    "Win32_System", 
    "Win32_System_Threading",
    "Win32_Media", 
    "Win32_Media_MediaFoundation", 
]
