[package]
name = "mirror-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.82"
crossbeam-utils = "0.8"
log = "0.4.20"
once_cell = "1.19.0"
napi = { version = "3.0.0-alpha.11", features = ["napi4"] }
napi-derive = "3.0.0-alpha.11"
mirror = { path = "../../mirror" }
utils = { path = "../../utils" }
winit = "0.30.5"

[build-dependencies]
napi-build = "1"
